[gd_scene load_steps=6 format=2]

[ext_resource path="res://Asset/tileset-Sheet.png" type="Texture" id=1]
[ext_resource path="res://script/KinematicBody2D.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.9322, 7.96307 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.2818, 6.03339 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 6.62959 )

[node name="Ennemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 64, 16, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.91555, 7.64943 )
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( 1.22377, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -2.13538, 7.2709 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="hurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2( -0.524475, -0.524467 )
shape = SubResource( 3 )
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_exited" from="hurtBox" to="." method="_on_hurtBox_body_exited"]
